Updated cdd and use to zsh

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,2 @@
-__pycache__/
-*.py[cod]
-
-# C extensions
-*.so
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# pyenv
-.python-version
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-
-# mypy
-.mypy_cache/
+**/tmp/
+**/temp.*
